<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PersonalCenter">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/black"
        android:src="@drawable/icon" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <Button
            android:id="@+id/startFilming"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/password_button"
            android:text="@string/start_filming"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/upload_button"
            android:text="@string/upload_your_video"
            android:textSize="25sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@drawable/password_button"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/beautify_font"
        android:text="@string/sentence"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />

</LinearLayout>